# env-exec

./: Cargo.toml  README.md  env-exec-add-tags.bat  env-exec-build.bat  env-exec-cmd-program.bat  env-exec-cmd.bat  env-exec-shell-program.bat  env-exec-shell.bat  memo.txt  test.toml
env-exec-configs/: checkitems.csv  env-exec-config.toml  test-env-exec-config.toml
env-exec-scripts/: env-exec-add-tags.bat  env-exec-cmd-program.bat  env-exec-cmd.bat  env-exec-deleter-build.bat  env-exec-init.bat  env-exec-shell-program.bat  env-exec-shell.bat
src/: main.rs  structs.rs  utils.rs
src/cmd/: mod.rs  restart.rs  run.rs  tag.rs
src/src/: main.cpp
