[package]
name = "env-exec"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bincode = "1.3.3"
log = "0.4.27"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["serde_derive"] }
simple_logger = "5.0.0"
tempfile = "3.19.1"
toml = "0.8.19"
windows = { version = "0.61.1", features = ["Win32", "Win32_System", "Win32_System_Threading"] }
